knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Master_Account_Plan_User_Setting__c/fields/pqcrush__Master_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Master_Account_Plan__c</fullName>
    <label>Master Account Plan</label>
    <referenceTo>pqcrush__pq_Master_Account_Plan__c</referenceTo>
    <relationshipLabel>Master Account Plan User Settings</relationshipLabel>
    <relationshipName>Master_Account_Plan_User_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>