knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Master_Account_Plan_User_Setting__c/fields/pqcrush__Show_Closed_Account_Plans__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Show_Closed_Account_Plans__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Closed Account Plans</label>
    <type>Checkbox</type>
</CustomField>